Fixing Alignment of the CTA

--- a/styles/hero.css
+++ b/styles/hero.css
@@ -63,7 +63,6 @@
     color: var(--color-textcolor);
     font-weight: 600;
     font-size: 17px;
-    flex-direction: column;
     justify-content: center;
     border: none;
     padding: 12px;
@@ -78,7 +77,6 @@
     position: absolute;
     inset: 0;
     left: -4px;
-    top: 0px;
     margin: auto;
     width: 143px;
     height: 48px;
